# PLAS

./: CMakeLists.txt  LICENSE  README.md  pom.xml  song.fa  testForFastaReader2song.fa
src/: test.fq
src/main/cpp/: main.cpp  main.h
src/main/java/: Basic.java  Contig.java  GetMiniHashMap.java  IOUtils.java  SimulateReadsFromFa.java
src/main/python/: DynamicProgram.py
src/test/cpp/: Concurrent.cpp  Concurrent.h  Demo01.cpp  Demo01.h  DynamicProgram.cpp  DynamicProgram.h  IOpractise.cpp  IOpractise.h
src/test/cpp/hifi/: ArtPtr.cpp  ArtPtr.h  CommandLines.cpp  Hash_Table.h  htab.cpp  ketopt.h  test.cpp  test.h
src/test/java/: Demo01DBG.java  Demo02KmerProfiler.java  Demo03SimulateReadsFromFa.java  Demo04Mini.java  Demo05TestTime.java  Demo06Graph.java  Demo07GFAMaker.java  Demo08TestKmer.java  IOUtils.java
